Refine IEP PDF save routine

--- a/public/special.html
+++ b/public/special.html
@@ -1253,57 +1253,56 @@
         }
 
     async function saveIepPdf() {
-                const contentNode = document.getElementById('iep-content');
-                if (!contentNode) {
-                    console.error("IEP 콘텐츠 노드를 찾을 수 없습니다.");
-                    return;
-                }
-    
-                // --- UI 요소 준비 ---
-                const saveBtn = document.getElementById('save-pdf-btn');
-                const actionsContainer = document.getElementById('iep-cover-actions');
-                const originalBtnText = saveBtn?.textContent;
-                const titleText = document.getElementById('iep-title')?.textContent.trim() || '개별화교육계획';
-                const filename = `${sanitizeFileName(titleText)}.pdf`;
-                const pages = contentNode.querySelectorAll('.iep-page');
+        const contentNode = document.getElementById('iep-content');
+        if (!contentNode) {
+            console.error('IEP 콘텐츠 노드를 찾을 수 없습니다.');
+            return;
+        }
 
-                // --- PDF 생성 전 처리 ---
-                if (saveBtn) {
-                    saveBtn.disabled = true;
-                    saveBtn.textContent = '저장 중...';
-                }
-                // 버튼 숨기기 및 그림자 제거 (PDF에 불필요한 요소 제거)
-                if (actionsContainer) actionsContainer.style.display = 'none';
-                pages.forEach(page => page.style.boxShadow = 'none');
+        // --- UI 요소 준비 ---
+        const saveBtn = document.getElementById('save-pdf-btn');
+        const actionsContainer = document.getElementById('iep-cover-actions');
+        const originalBtnText = saveBtn?.textContent;
+        const titleText = document.getElementById('iep-title')?.textContent.trim() || '개별화교육계획';
+        const filename = `${sanitizeFileName(titleText)}.pdf`;
+        const pages = contentNode.querySelectorAll('.iep-page');
 
+        // --- PDF 생성 전 처리 ---
+        if (saveBtn) {
+            saveBtn.disabled = true;
+            saveBtn.textContent = '저장 중...';
+        }
+        // 버튼 숨기기 및 그림자 제거 (PDF에 불필요한 요소 제거)
+        if (actionsContainer) actionsContainer.style.display = 'none';
+        pages.forEach(page => (page.style.boxShadow = 'none'));
 
-                // --- html2pdf 옵션 설정 ---
-                const opt = {
-                    margin: 0,
-                    filename: filename,
-                    image: { type: 'jpeg', quality: 0.98 },
-                    html2canvas: { scale: 2, useCORS: true, scrollY: -window.scrollY },
-                    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-                    };
+        // --- html2pdf 옵션 설정 ---
+        const opt = {
+            margin: 0,
+            filename: filename,
+            image: { type: 'jpeg', quality: 0.98 },
+            html2canvas: { scale: 2, useCORS: true, scrollY: -window.scrollY },
+            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+        };
 
-                // --- PDF 생성 및 저장 ---
-                try {
-                    await html2pdf().from(contentNode).set(opt).save();
-                    showToast('PDF 저장이 완료되었습니다.');
-                } catch (error) {
-                    console.error('PDF 저장 중 오류:', error);
-                    showToast('PDF 저장 중 오류가 발생했습니다.');
-                } finally {
-                    // --- PDF 생성 후 처리 (숨겼던 요소 복원) ---
-                    if (actionsContainer) actionsContainer.style.display = 'flex';
-                    pages.forEach(page => page.style.boxShadow = ''); // 원래 스타일로 복원
-    
-                    if (saveBtn) {
-                        saveBtn.disabled = false;
-                        saveBtn.textContent = originalBtnText;
-                    }
-                }
-            }
+        // --- PDF 생성 및 저장 ---
+        try {
+            await html2pdf().from(contentNode).set(opt).save();
+            showToast('PDF 저장이 완료되었습니다.');
+        } catch (error) {
+            console.error('PDF 저장 중 오류:', error);
+            showToast('PDF 저장 중 오류가 발생했습니다.');
+        } finally {
+            // --- PDF 생성 후 처리 (숨겼던 요소 복원) ---
+            if (actionsContainer) actionsContainer.style.display = 'flex';
+            pages.forEach(page => (page.style.boxShadow = '')); // 원래 스타일로 복원
+
+            if (saveBtn) {
+                saveBtn.disabled = false;
+                saveBtn.textContent = originalBtnText;
+            }
+        }
+    }
 
             const html2canvasFn = window.html2canvas;
             const jsPdfConstructor = window.jspdf?.jsPDF || window.jsPDF;
